syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.be_hase.grpc.micrometer.example.hello";

package hello;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
    rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply) {
    }
    rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply) {
    }
    rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloReply) {
    }
}
